# claude-seer

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix
.claude/: settings.json
.claude/agent-memory/code-architect/: MEMORY.md
.claude/agent-memory/product-owner/: MEMORY.md  jsonl-format.md  mvp-stories.md  roadmap-decisions.md
.claude/agent-memory/qa-engineer/: MEMORY.md
.claude/agent-memory/tui-designer/: MEMORY.md  patterns.md
.claude/agents/: code-architect.md  engineer.md  product-owner.md  qa-engineer.md  tui-designer.md
.github/workflows/: ci.yml
benches/: benchmarks.rs  divan_benchmarks.rs
docs/: DATA_FLOW.md  ROADMAP.md  TESTING_STRATEGY.md  TURN_ASSEMBLY.md  VERSION_LOG.md
src/: app.rs  lib.rs  main.rs
src/data/: classify.rs  error.rs  mod.rs  model.rs  parser.rs  session_loader.rs  usage.rs
src/source/: error.rs  filesystem.rs  mod.rs
src/tui/: event.rs  mod.rs  ui.rs
src/tui/widgets/: conversation.rs  empty_state.rs  help.rs  layout.rs  md_wrap.rs  mod.rs  modal.rs  project_list.rs  session_list.rs  status_bar.rs  text_utils.rs  title_bar.rs
tests/fixtures/: session_consecutive_users.jsonl  session_linear.jsonl  session_mid_toolcall.jsonl  session_mismatched_toolresult.jsonl  session_multi_turn.jsonl  session_orphaned_progress.jsonl  session_resumed.jsonl  session_sidechain.jsonl  session_with_errors.jsonl
tests/fixtures/claude_home/projects/: stray-file.txt
tests/fixtures/claude_home/projects/other-project/: session-3.jsonl
